--- a/partsystem/LoginWindow.xaml
+++ b/partsystem/LoginWindow.xaml
@@ -1,12 +1,14 @@
-﻿<Window x:Class="partsystem.MainWindow"
+﻿<Window x:Name="PasswordBox" x:Class="partsystem.LoginWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:partsystem"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="240.299">
+        Title="LoginWindow" Height="350" Width="240.299">
     <Grid Margin="0,0,293.4,-19.2">
-        <PasswordBox HorizontalAlignment="Left" Margin="34,163,-195,0" VerticalAlignment="Top" Width="161" RenderTransformOrigin="0.116,0.086" Height="27"/>
+        <TextBox x:Name="LoginBox" HorizontalAlignment="Left" Height="30" Margin="34,84,-195,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="161"/>
+        <Button Content="Zaloguj" HorizontalAlignment="Left" Margin="34,213,-195,0" VerticalAlignment="Top" Width="161" Height="67" Click="Button_Click" FontFamily="Tahoma" FontSize="20" FontWeight="Bold"/>
+        <PasswordBox x:Name="PassBox" HorizontalAlignment="Left" Margin="34,161,-195,0" VerticalAlignment="Top" Width="161" Height="26"/>
     </Grid>
 </Window>
