--- a/partsystem/AddPart.xaml
+++ b/partsystem/AddPart.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:partsystem"
         mc:Ignorable="d"
-        Title="AddPart" Height="600" Width="800" ResizeMode="NoResize">
+        Title="AddPart" Height="600" Width="1200" ResizeMode="NoResize">
     <Grid>
         <DataGrid SelectionMode="Single" CanUserAddRows="false" x:Name="ExistingPartsDataGrid" HorizontalAlignment="Left" Height="459" Margin="10,101,0,0" VerticalAlignment="Top" Width="774" AutoGenerateColumns="False" SelectionChanged="ExistingPartsDataGrid_SelectionChanged">
 
@@ -20,7 +20,7 @@
         </DataGrid>
         <Button x:Name="AddPartButton" Content="ADD &#xD;&#xA;PART&#xD;&#xA;&#xD;&#xA;&#xD;&#xA;" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="86" Height="86" Click="AddPartButton_Click"/>
         <Button x:Name="_CloseButton" Content="ZAMKNIJ" HorizontalAlignment="Left" Margin="698,10,0,0" VerticalAlignment="Top" Width="86" Height="86" Click="_CloseButton_Click"/>
-        <Grid x:Name="ItemDetailsGrid" HorizontalAlignment="Left" Height="351" Margin="789,10,0,0" VerticalAlignment="Top" Width="395" Visibility="Hidden">
+        <Grid x:Name="ItemDetailsGrid" HorizontalAlignment="Left" Height="523" Margin="789,-10,0,0" VerticalAlignment="Top" Width="395" Visibility="Visible">
             <Label Content="Part ID" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Height="50" Width="105" FontSize="20" FontWeight="Bold"/>
             <Label Content="Name" HorizontalAlignment="Left" Margin="10,65,0,0" VerticalAlignment="Top" Height="50" Width="105" FontSize="20" FontWeight="Bold"/>
             <Label Content="Description" HorizontalAlignment="Left" Margin="10,120,0,0" VerticalAlignment="Top" Height="50" Width="105" FontSize="16" FontWeight="Bold"/>
@@ -29,10 +29,23 @@
             <TextBox x:Name="PartIDTB" HorizontalAlignment="Left" Height="50" Margin="120,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="265"/>
             <TextBox x:Name="NameTB" HorizontalAlignment="Left" Height="50" Margin="120,65,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="265"/>
             <TextBox x:Name="DescriptionTB" HorizontalAlignment="Left" Height="50" Margin="120,120,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="265"/>
-            <TextBox x:Name="TypeTB" HorizontalAlignment="Left" Height="50" Margin="120,175,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="265"/>
             <TextBox x:Name="ExtNameTB" HorizontalAlignment="Left" Height="50" Margin="120,230,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="265"/>
             <Button x:Name="CancelBUTTON" Content="Anuluj" HorizontalAlignment="Left" Height="50" Margin="120,285,0,0" VerticalAlignment="Top" Width="100" Click="CancelButton_Click"/>
             <Button x:Name="SaveButton" Content="Zapisz" HorizontalAlignment="Left" Height="50" Margin="225,285,0,0" VerticalAlignment="Top" Width="160" Click="SaveButton_Click"/>
+            <ComboBox SelectedIndex="0" x:Name="ChangeTypeCB" HorizontalAlignment="Left" Margin="120,175,0,0" VerticalAlignment="Top" Width="265" Height="50" SelectionChanged="ComboBox_SelectionChanged">
+                <ComboBoxItem Content ="sensor"/>
+                <ComboBoxItem  Content ="wire"/>
+                <ComboBoxItem Content ="tool"/>
+
+            </ComboBox>
         </Grid>
+        <TextBox x:Name="SearchBox" HorizontalAlignment="Left" Height="49" Margin="96,47,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="301" TextChanged="TextBox_TextChanged"/>
+        <ComboBox SelectedIndex="0" x:Name="searchTypeCB" HorizontalAlignment="Left" Margin="402,47,0,0" VerticalAlignment="Top" Width="142" Height="49" SelectionChanged="searchTypeCB_SelectionChanged" >
+            <ComboBoxItem  x:Name="name" Content ="name"/>
+            <ComboBoxItem  x:Name="partid" Content ="part_id"/>
+            <ComboBoxItem  x:Name="ext_name" Content ="ext_name"/>
+            <ComboBoxItem  x:Name="description" Content ="description"/>
+
+        </ComboBox>
     </Grid>
 </Window>
